# SmartCarDashboard

./: CMakeLists.txt  CallingPage.qml  Clock.qml  Films.qml  Filmselection.qml  Home.qml  Home_2.qml  Main.qml  Parking.qml  TimeClock.qml  WeatherUtils.js  amelioration.txt  main.cpp  mappage.qml  music.qml  phonepage.qml  settings.qml
assets/3d/: 20190501_Car seat complete embedded.mtl
images/: backup.txt
